# rag-scraping

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  pytest.ini  scrape_site.py
.cursor/rules/: functional-programming.mdc  notebooks.mdc  uv.mdc
notebooks/: analyze_data_quality.py  create_rag_ready_from_detailed.py  debug_main_page.py  deduplicate_pdfs.py  demo_embeddings.py  fix_stubborn_pages.py  prd.txt  test_content_retry.py  test_detailed_scraping.py  update_production_with_fix.py
notebooks/output/demo/: detailed_items_20250827_134826.json
notebooks/vector_db/: upload_to_azure.py
scripts/: create_complete_unified_rag_output.py  create_unified_rag_output.py  debug_content_extraction.py  rescrape_problematic_items.py  summarize_improvements.py  test_architecture.py  test_improved_scraping.py  validate_existing_data.py
scripts/vector_db/: upload_to_azure.py
src/rag_scraping/: __init__.py  __main__.py  config.py  models.py  pages.py  pdf_processing.py  pdfs.py  pipeline.py  rag_chunking.py  scraping.py  utils.py  versnellingsplan.py
src/vector_db/: __init__.py  azure.py  base.py  embeddings.py  upload.py  validation.py
tests/: README.md  __init__.py  conftest.py  test_architecture.py  test_data_validation.py  test_functional_smoke.py  test_integration_main_page.py  test_integration_single_item.py  test_knowledge_base_item.py  test_new_architecture.py  test_pdf_pipeline.py  test_regression.py  test_scraper.py  test_smoke.py
