[project]
name = "rag-scraping"
version = "0.1.0"
description = "RAG Scraping Project"
requires-python = ">=3.8"
dependencies = [
    "crawl4ai>=0.1.0",
    "beautifulsoup4>=4.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_scraping"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
]
