[project]
name = "rag-scraping"
version = "0.1.0"
description = "RAG Scraping Project"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "nest_asyncio",
    "ipykernel",
    "unstructured[pdf]>=0.18.5",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_scraping"]

[tool.ruff]
line-length = 88


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
]
